; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/boot/extr_epapr.c_epapr_platform_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/boot/extr_epapr.c_epapr_platform_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@epapr_magic = common dso_local global i64 0, align 8
@ima_size = common dso_local global i64 0, align 8
@fdt_addr = common dso_local global i64 0, align 8
@_end = common dso_local global i64 0, align 8
@platform_fixups = common dso_local global i32 0, align 4
@platform_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @epapr_platform_init(i64 %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load i64, i64* %9, align 8
  store i64 %11, i64* @epapr_magic, align 8
  %12 = load i64, i64* %10, align 8
  store i64 %12, i64* @ima_size, align 8
  %13 = load i64, i64* %6, align 8
  store i64 %13, i64* @fdt_addr, align 8
  %14 = load i64, i64* @_end, align 8
  %15 = load i64, i64* @ima_size, align 8
  %16 = load i64, i64* @_end, align 8
  %17 = sub i64 %15, %16
  %18 = call i32 @simple_alloc_init(i64 %14, i64 %17, i32 32, i32 64)
  %19 = load i64, i64* @fdt_addr, align 8
  %20 = inttoptr i64 %19 to i8*
  %21 = call i32 @fdt_init(i8* %20)
  %22 = call i32 (...) @serial_console_init()
  %23 = load i32, i32* @platform_fixups, align 4
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @platform_ops, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @simple_alloc_init(i64, i64, i32, i32) #1

declare dso_local i32 @fdt_init(i8*) #1

declare dso_local i32 @serial_console_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
